--- a/style.css
+++ b/style.css
@@ -1,76 +1,83 @@
 @font-face {
-    font-family:FreightBigPro ;
-    src: url(./FreightBigProLight-Regular.woff2);
+  font-family: FreightBigPro;
+  src: url(./FreightBigProLight-Regular.woff2);
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:FreightBigPro;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: FreightBigPro;
 }
-html , body{
-    height: 100%;
-    width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
-.loader{
-    height: 100vh;
-    width: 100%;
-    background-color:black;
-    position: absolute;
-    color: #fff;
-    z-index: 8;    
+.loader {
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+  position: absolute;
+  color: #fff;
+  z-index: 8;
 }
-.loader h1{
-    text-align: center;
-    font-size: 6vw;
-    line-height: 4.5vw;
-    font-weight: 500;
-    letter-spacing: -3px;
-    position: relative;
-    z-index: 9;
-}
-.loader video{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    object-fit: cover;
-    z-index: 7;
-}
-.yellow{
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    background-color: #F3E41A;
-    z-index: 8;
-
-}
-.page1{
-    height: 100vh;
-    width: 100%;
-    background-color: #F3E41A;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.page1 h1{
-    text-align: center;
-    font-size: 6vw;
-    line-height: 4.5vw;
-    font-weight: 500;
-    letter-spacing: -3px;
-    position: absolute;
-    z-index: 10;
+.text {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
-.page2{
-    height: 100vh;
-    width: 100%;
-    background-color: #000;
+.text h1 {
+  text-align: center;
+  font-size: 6vw;
+  line-height: 4.5vw;
+  font-weight: 500;
+  letter-spacing: -3px;
+  z-index: 10;
 }
-.page3{
-    height: 100vh;
-    width: 100%;
-    background-color: #fff;
+.loader video {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  object-fit: cover;
+  z-index: 7;
+}
+.yellow {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  background-color: #f3e41a;
+  z-index: 8;
+}
+.page1 {
+  height: 100vh;
+  width: 100%;
+  background-color: #f3e41a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.page1 h1 {
+  text-align: center;
+  font-size: 6vw;
+  line-height: 4.5vw;
+  font-weight: 500;
+  letter-spacing: -3px;
+  position: absolute;
+}
+
+.page2 {
+  height: 100vh;
+  width: 100%;
+  background-color: #000;
+}
+.page3 {
+  height: 100vh;
+  width: 100%;
+  background-color: #fff;
 }
