--- a/style.css
+++ b/style.css
@@ -90,6 +90,22 @@ body {
     width: 100%;
     padding: 2.5vw 3vw;
     z-index:2;
+    display: flex;
+    justify-content: space-between;
+  align-items: center;
+
+}
+.nav div{
+  display: flex;
+  align-items: center;
+  gap: 3vw;
+}
+.nav div a{
+text-decoration: none;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 1vw;
+color: black;
+font-weight: 650;
 }
 
 @media (max-width:600px) {
